proposal: Initial version of the project proposal.

--- a/project_proposal/project_proposal.tex
+++ b/project_proposal/project_proposal.tex
@@ -25,38 +25,124 @@
 
 % Meta-study, i.e. a survey/essay project.
 
-foo
+The idea behind the project is to conduct a meta-study covering research from different disciplines related to associative memory, which may be defined as \textit{``the ability to correlate different memories to the same fact or event''} \cite{memsistor}.
 
 \section{Aim and Objectives}
 
-foo
+The aim of the project is to investigate current and future capabilities of artificial models for associative memory.
+
+The achieve this aim, the following objectives have been identified.
+
+\begin{enumerate}
+	\item Identify state-of-the-art models for associative memory from different fields (e.g. Hopfield, memsistor, ...).
+	\item Compare their capabilities to that of human potential.
+	\item Discuss future possibilities should models for associative memory reach human or post-human potential.
+\end{enumerate}
 
 \section{Deliverables}
 
-% A meta-study report
-
-% A presentation
-
-foo
+\begin{itemize}
+	\item A meta-study report of models for associative memory research\footnote{Project Report: \url{https://github.com/mewmew/associative_memory/issues/7}}
+	\item A project presentation\footnote{Presentation: \url{https://github.com/mewmew/associative_memory/issues/8}}
+\end{itemize}
 
 \section{Scope}
 
 % What is the scope and outline of the project?
 
-foo
-
-\section{Project Approach}
-
-% Brief discussion on how we will do the project; i.e. meta-study.
-
-foo
+The scope of the project will initially be wide, to gain insight into the different models for associative memory that exists within different fields of science. As the project matures, its scope will naturally become more and more narrow, as key models for comparison have been identified.
 
 \section{Starting Point of Research}
 
-foo
+A set of research papers, chapters from books and course material have been identified as the starting point of research. Throughout the course of the project, this list will be maintained online, refined and updated.
+
+Interesting papers within the field of machine learning related to associative memory, some of which are key to the field.
+
+\begin{itemize}
+	\item Kohonen, T., et al. ``A principle of neural associative memory.'' Neuroscience 2.6 (1977): 1065-1076.
+	\item Kohonen, Teuvo. Self-organization and associative memory. Vol. 8. Springer Science \& Business Media, 2012.
+	\item Kohonen, Teuvo. Associative memory: A system-theoretical approach. Vol. 17. Springer Science \& Business Media, 2012.
+	\item Hinton, Geoffrey E., and James A. Anderson. Parallel Models of Associative Memory: Updated Edition. Psychology press, 2014.
+	\item McEliece, Robert J., et al. ``The capacity of the Hopfield associative memory.'' Information Theory, IEEE Transactions on 33.4 (1987): 461-482.
+	\item Bohland, Jason W., and Ali A. Minai. ``Efficient associative memory using small-world architecture.'' Neurocomputing 38 (2001): 489-496.
+	\item Giles, C. Lee, and Tom Maxwell. ``Learning, invariance, and generalization in high-order neural networks.'' Applied optics 26.23 (1987): 4972-4978.
+	\item Nakano, Kaoru. ``Associatron-a model of associative memory.'' Systems, Man and Cybernetics, IEEE Transactions on 3 (1972): 380-388.
+	\item Cao, Jinde, and Qiankun Song. ``Stability in Cohen? Grossberg-type bidirectional associative memory neural networks with time-varying delays.'' Nonlinearity 19.7 (2006): 1601.
+	\item Hopfield, John J. ``Neural networks and physical systems with emergent collective computational abilities.'' Proceedings of the national academy of sciences 79.8 (1982): 2554-2558.
+	\item Brown, Martin, and Christopher John Harris. ``Neurofuzzy adaptive modelling and control.'' (1994).
+	\item Psaltis, Demetri, and Nabil Farhat. ``Optical information processing based on an associative-memory model of neural nets with thresholding and feedback.'' Optics Letters 10.2 (1985): 98-100.
+	\item Carpenter, Gail A. ``Neural network models for pattern recognition and associative memory.'' Neural networks 2.4 (1989): 243-257.
+	\item Barto, Andrew G., Richard S. Sutton, and Peter S. Brouwer. ``Associative search network: A reinforcement learning associative memory.'' Biological cybernetics 40.3 (1981): 201-211.
+	\item Raaijmakers, Jeroen GW, and Richard M. Shiffrin. ``SAM: A theory of probabilistic search of associative memory.'' The psychology of learning and motivation: Advances in research and theory 14 (1981): 207-262.
+	\item Liao, Xiaofeng, and Juebang Yu. ``Qualitative analysis of Bi-directional Associative Memory with time delay.'' International Journal of Circuit Theory and Applications 26.3 (1998): 219-229.
+	\item Yoshizawa, Shuji, Masahiko Morita, and Shun-Ichi Amari. ``Capacity of associative memory using a nonmonotonic neuron model.'' Neural Networks 6.2 (1993): 167-176.
+	\item Gao Huang, Yu Sun, Zhuang Liu, Daniel Sedra, Kilian Weinberger. ``Deep Networks with Stochastic Depth'', 2016
+\end{itemize}
+
+Other broader studies or meta-studies related to associative memory.
+
+\begin{itemize}
+\item Arel, Itamar, Derek C. Rose, and Thomas P. Karnowski. ``Deep machine learning-a new frontier in artificial intelligence research [research frontier].'' Computational Intelligence Magazine, IEEE 5.4 (2010): 13-18.
+\item Palm, Günther. ``On associative memory.'' Biological cybernetics 36.1 (1980): 19-31.
+\item Kan, Irene P., et al. ``Implicit memory for novel associations between pictures: effects of stimulus unitization and aging.'' Memory \& cognition 39.5 (2011): 778-790.
+\end{itemize}
+
+Interesting papers from the field of neuroscience related to associative memories.
+
+\begin{itemize}
+	\item Fanselow, Michael S., and Andrew M. Poulos. ``The neuroscience of mammalian associative learning.'' Annu. Rev. Psychol. 56 (2005): 207-234.
+	\item Gabrieli, John DE. ``Cognitive neuroscience of human memory.'' Annual review of psychology 49.1 (1998): 87-115.
+	\item Reijmers, Leon G., et al. ``Localization of a stable neural correlate of associative memory.'' Science 317.5842 (2007): 1230-1233.
+	\item Hasselmo, Michael E., et al. ``A model of the hippocampus combining self-organization and associative memory function.'' Advances in neural information processing systems (1995): 77-84.
+	\item Lytton, William W., and Peter Lipton. ``Can the hippocampus tell time? The temporo-septal engram shift model.'' Neuroreport 10.11 (1999): 2301-2306.
+	\item Biological Aspects of learning, memory formation and ontogeny of the CNS. 1977.
+	\item Rahmann, Hinrich, and Mathilde Rahmann. The neurobiological basis of memory and behavior. Springer Science \& Business Media, 2012.
+	\item Amari, Shun-Ichi, and Kenjiro Maginu. ``Statistical neurodynamics of associative memory.'' Neural Networks 1.1 (1988): 63-73.
+	\item Pershin, Yuriy V., and Massimiliano Di Ventra. ``Experimental demonstration of associative memory with memristive neural networks.'' Neural Networks 23.7 (2010): 881-886.
+	\item Wang, DeLiang, Joachim Buhmann, and Christoph von der Malsburg. ``Pattern segmentation in associative memory.'' Neural Computation 2.1 (1990): 94-106.
+	\item Nakazawa, Kazu, et al. ``Requirement for hippocampal CA3 NMDA receptors in associative memory recall.'' Science 297.5579 (2002): 211-218.
+	\item Ranganath, Charan, et al. ``Inferior temporal, prefrontal, and hippocampal contributions to visual working memory maintenance and associative memory retrieval.'' The Journal of Neuroscience 24.16 (2004): 3917-3925.
+	\item Levy, William B., and Oswald Steward. ``Synapses as associative memory elements in the hippocampal formation.'' Brain research 175.2 (1979): 233-245.
+	\item Lansner, Anders. ``Associative memory models: from the cell-assembly theory to biophysically detailed cortex simulations.'' Trends in neurosciences 32.3 (2009): 178-186.
+	\item Doyère, Valérie, and Serge Laroche. ``Linear relationship between the maintenance of hippocampal long-term potentiation and retention of an associative memory.'' Hippocampus 2.1 (1992): 39-48.
+	\item Staresina, Bernhard P., and Lila Davachi. ``Object unitization and associative memory formation are supported by distinct brain regions.'' The Journal of Neuroscience 30.29 (2010): 9890-9897.
+	\item Amari, Shun-Ichi. ``Characteristics of sparsely encoded associative memory.'' Neural Networks 2.6 (1989): 451-457.
+	\item Gibson, William G., and John Robinson. ``Statistical analysis of the dynamics of a sparse associative memory.'' Neural Networks 5.4 (1992): 645-661.
+	\item Maren, Stephen. ``Synaptic mechanisms of associative memory in the amygdala.'' Neuron 47.6 (2005): 783-786.
+\end{itemize}
+
+Papers from the field of psychology (cognitive psychology, biological psychology, ...) related to associative memory.
+
+\begin{itemize}
+	\item McClelland, James L., Bruce L. McNaughton, and Randall C. O'Reilly. ``Why there are complementary learning systems in the hippocampus and neocortex: insights from the successes and failures of connectionist models of learning and memory.'' Psychological review 102.3 (1995): 419.
+	\item Anderson, John R., and Gordon H. Bower. Human associative memory. Psychology press, 2014.
+	\item Srull, Thomas K., Meryl Lichtenstein, and Myron Rothbart. ``Associative storage and retrieval processes in person memory.'' Journal of Experimental Psychology: Learning, Memory, and Cognition 11.2 (1985): 316.
+\end{itemize}
+
+Papers from other fields related to associative memory.
+
+\begin{itemize}
+	\item Paek, Eung G., and Demetri Psaltis. ``Optical associative memory using Fourier transform holograms.'' Optical Engineering 26.5 (1987): 265428-265428.
+\end{itemize}
+
+The key papers will be reviewed and critically evaluated thoroughly, while other papers may be skimmed to get a feel for the area, and highlight other key papers of interest for extensive review. As mentioned above, this list is continuously evolving and the broad categories above should be considered as guiding suggestions.
 
 \section{Project Plan}
 
-foo
+The project plan, which is hosted online\footnote{Project Plan: \url{https://github.com/mewmew/associative_memory/issues/3}}, aims to coordinate efforts by tracking the major tasks and will be continuously updated throughout the project. The project makes extensive use of the GitHub issue tracker to guide research, discuss details regarding the major tasks and sub-tasks and to track weekly dead-lines, as indicated by the project milestones\footnote{Project Milestones: \url{https://github.com/mewmew/associative_memory/milestones}}.
+
+The project will contain the following major tasks, many of which overlap in time and feed into one another; i.e. writing may give rise to new ideas, the meta-study may identify other models for associative memory to research, and each part of the project may refine the aim and objectives of the project as a clearer understanding is gained.
+
+\begin{itemize}
+	\item Search for relevant research\footnote{Starting Point of Research: \url{https://github.com/mewmew/associative_memory/issues/1}}
+	\item Preliminary literature review, get a feel for the field\footnote{Preliminary Literature Review: \url{https://github.com/mewmew/associative_memory/issues/4}}
+	\item Discuss the aim and objective with the project\footnote{Identify Aim and Objectives: \url{https://github.com/mewmew/associative_memory/issues/2}}
+	\item Write a project proposal\footnote{Project Proposal: \url{https://github.com/mewmew/associative_memory/issues/5}}
+	\item Conduct a literature review\footnote{Literature Review: \url{https://github.com/mewmew/associative_memory/issues/6}}
+	\item Write the project report\footnote{Project Report: \url{https://github.com/mewmew/associative_memory/issues/7}}
+	\item Prepare for the presentation\footnote{Presentation: \url{https://github.com/mewmew/associative_memory/issues/8}}
+\end{itemize}
+
+\bibliography{references}
 
 \end{document}
