proposal: Erik is now part of other exciting adventures, we will associativelly remember him thoughout the project :)

--- a/project_proposal/project_proposal.tex
+++ b/project_proposal/project_proposal.tex
@@ -9,7 +9,7 @@
   }
 }
 
-\author{Wenting Jin, Lucas Arnström, Erik Österberg \& Robin Eklind}
+\author{Wenting Jin, Lucas Arnström \& Robin Eklind}
 
 \begin{document}
 
