proposal: Rephrase the project aim.

--- a/project_proposal/project_proposal.tex
+++ b/project_proposal/project_proposal.tex
@@ -29,7 +29,7 @@ The idea behind the project is to conduct a meta-study covering research from di
 
 \section{Aim and Objectives}
 
-The aim of the project is to investigate current and future capabilities of artificial models for associative memory.
+The aim of the project is to investigate the current capabilities and future potential of artificial models for associative memory.
 
 The achieve this aim, the following objectives have been identified.
 
