--- a/project_proposal/project_proposal.tex
+++ b/project_proposal/project_proposal.tex
@@ -34,8 +34,8 @@ The aim of the project is to investigate the current capabilities and future pot
 The achieve this aim, the following objectives have been identified.
 
 \begin{enumerate}
-	\item Identify state-of-the-art models for associative memory from different fields (e.g. Hopfield, memsistor, ...).
-	\item Compare their capabilities to that of human potential.
+	\item Outline key models for associative memory from different fields of research (e.g. Hopfield, memsistor, ...).
+	\item Compare the capabilities of the ``state of the art'' models for associative memory to that of human potential.
 	\item Discuss future possibilities should models for associative memory reach human or post-human potential.
 \end{enumerate}
 
