proposal: Minor rephrasing.

--- a/project_proposal/project_proposal.tex
+++ b/project_proposal/project_proposal.tex
@@ -50,11 +50,11 @@ The achieve this aim, the following objectives have been identified.
 
 % What is the scope and outline of the project?
 
-The scope of the project will initially be wide, to gain insight into the different models for associative memory that exists within different fields of science. As the project matures, its scope will naturally become more and more narrow, as key models for comparison have been identified.
+The scope of the project will initially be wide, to gain insight into a variety of models for associative memory that exist within different fields of research. As the project matures, its scope will naturally become more and more narrow, as key models for comparison have been identified.
 
 \section{Starting Point of Research}
 
-A set of research papers, chapters from books and course material have been identified as the starting point of research. Throughout the course of the project, this list will be maintained online, refined and updated.
+A set of research papers, chapters from books and course material have been identified as the starting point of research. Throughout the course of the project, this list will be maintained online\footnote{Starting Point of Research: \url{https://github.com/mewmew/associative_memory/issues/1}}, refined and updated.
 
 Interesting papers within the field of machine learning related to associative memory, some of which are key to the field.
 
@@ -87,7 +87,7 @@ Other broader studies or meta-studies related to associative memory.
 \item Kan, Irene P., et al. ``Implicit memory for novel associations between pictures: effects of stimulus unitization and aging.'' Memory \& cognition 39.5 (2011): 778-790.
 \end{itemize}
 
-Interesting papers from the field of neuroscience related to associative memories.
+Interesting papers from the field of neuroscience related to associative memory.
 
 \begin{itemize}
 	\item Fanselow, Michael S., and Andrew M. Poulos. ``The neuroscience of mammalian associative learning.'' Annu. Rev. Psychol. 56 (2005): 207-234.
@@ -119,23 +119,23 @@ Papers from the field of psychology (cognitive psychology, biological psychology
 	\item Srull, Thomas K., Meryl Lichtenstein, and Myron Rothbart. ``Associative storage and retrieval processes in person memory.'' Journal of Experimental Psychology: Learning, Memory, and Cognition 11.2 (1985): 316.
 \end{itemize}
 
-Papers from other fields related to associative memory.
+Papers from other fields of research related to associative memory.
 
 \begin{itemize}
 	\item Paek, Eung G., and Demetri Psaltis. ``Optical associative memory using Fourier transform holograms.'' Optical Engineering 26.5 (1987): 265428-265428.
 \end{itemize}
 
-The key papers will be reviewed and critically evaluated thoroughly, while other papers may be skimmed to get a feel for the area, and highlight other key papers of interest for extensive review. As mentioned above, this list is continuously evolving and the broad categories above should be considered as guiding suggestions.
+The key papers will be reviewed and critically evaluated thoroughly, while other papers may be skimmed to get a feel for the area, and to highlight other key papers of interest for more careful review. As mentioned above, this list is continuously evolving and the broad categories should be regarded as guiding suggestions rather than correct classifications of research papers.
 
 \section{Project Plan}
 
-The project plan, which is hosted online\footnote{Project Plan: \url{https://github.com/mewmew/associative_memory/issues/3}}, aims to coordinate efforts by tracking the major tasks and will be continuously updated throughout the project. The project makes extensive use of the GitHub issue tracker to guide research, discuss details regarding the major tasks and sub-tasks and to track weekly dead-lines, as indicated by the project milestones\footnote{Project Milestones: \url{https://github.com/mewmew/associative_memory/milestones}}.
+The project plan, which is hosted online\footnote{Project Plan: \url{https://github.com/mewmew/associative_memory/issues/3}}, aims to coordinate efforts by tracking the major tasks and will be continuously updated throughout the project. The project makes extensive use of the GitHub issue tracker to guide the meta-study research, discuss details regarding the major tasks and sub-tasks of the project, and to track weekly deadlines, as governed by the project milestones\footnote{Project Milestones: \url{https://github.com/mewmew/associative_memory/milestones}}.
 
-The project will contain the following major tasks, many of which overlap in time and feed into one another; i.e. writing may give rise to new ideas, the meta-study may identify other models for associative memory to research, and each part of the project may refine the aim and objectives of the project as a clearer understanding is gained.
+The project will contain the following major tasks, many of which overlap in time and feed into one another (i.e. the writing may give rise to new research ideas, the meta-study may identify other models for associative memory to research, and each part of the project may refine the aim and objectives of the project as a clearer understanding is gained).
 
 \begin{itemize}
 	\item Search for relevant research\footnote{Starting Point of Research: \url{https://github.com/mewmew/associative_memory/issues/1}}
-	\item Preliminary literature review, get a feel for the field\footnote{Preliminary Literature Review: \url{https://github.com/mewmew/associative_memory/issues/4}}
+	\item Preliminary literature review, get a feel for the fields of research related to associative memory\footnote{Preliminary Literature Review: \url{https://github.com/mewmew/associative_memory/issues/4}}
 	\item Discuss the aim and objective with the project\footnote{Identify Aim and Objectives: \url{https://github.com/mewmew/associative_memory/issues/2}}
 	\item Write a project proposal\footnote{Project Proposal: \url{https://github.com/mewmew/associative_memory/issues/5}}
 	\item Conduct a literature review\footnote{Literature Review: \url{https://github.com/mewmew/associative_memory/issues/6}}
