proposal: Clarify the third objective based on feedback from Wenting.

--- a/project_proposal/project_proposal.tex
+++ b/project_proposal/project_proposal.tex
@@ -36,7 +36,7 @@ The achieve this aim, the following objectives have been identified.
 \begin{enumerate}
 	\item Outline key models for associative memory from different fields of research (e.g. Hopfield, memsistor, ...).
 	\item Compare the capabilities of the ``state of the art'' models for associative memory to that of human potential.
-	\item Discuss future possibilities should models for associative memory reach human or post-human potential.
+	\item Discuss future possibilities if models for associative memory were to reach human or post-human potential.
 \end{enumerate}
 
 \section{Deliverables}
