a tiny start at the boltzmann machine

--- a/report/references.bib
+++ b/report/references.bib
@@ -44,6 +44,17 @@
 }
 
 % Lucas
+@article{ackley1985learning,
+  title={A learning algorithm for Boltzmann machines},
+  author={Ackley, David H and Hinton, Geoffrey E and Sejnowski, Terrence J},
+  journal={Cognitive science},
+  volume={9},
+  number={1},
+  pages={147--169},
+  year={1985},
+  publisher={Elsevier}
+}
+
 @article{capacity_of_hopfield,
   title={The capacity of the Hopfield associative memory},
   author={McEliece, Robert J and Posner, Edward C and Rodemich, Eugene R and Venkatesh, Santosh S},
