--- a/report/report.tex
+++ b/report/report.tex
@@ -41,11 +41,11 @@ Mostly auto-associative. Also hetro-associative?
 
 Mostly hetro-associative. Also auto-associative.
 
-\subsection{Boltzman}
+\subsection{Boltzmann Machine}
 
-foo
+%Boltzmann Machines are a form of Hopfield networks but contains stochastic features.
 
-% TODO: Check wiki.
+The "Boltzmann Machine" is a form of "parallel constraint satisfaction network" \cite{ackley1985learning}. It is capable of learning the underlying constraints of a domain by only being shown examples of it.
 
 \subsection{Hamming networks}
 
@@ -86,7 +86,7 @@ Definitions of capacity.
 
 foo
 
-\subsection{Boltzman}
+\subsection{Boltzmann Machine}
 
 Pure Boltzman does not scale, thus impractical.
 
@@ -128,7 +128,7 @@ Preliminary list of references, cited to force inclusion within the bibliography
 \cite{computational_abilities} \cite{optical_processing} \cite{capacity_of_nonmonotonic_model} \cite{stimulus_unitization_and_aging}
 
 % Lucas
-\cite{capacity_of_hopfield} \cite{high-order_neural_networks} \cite{neural_network_models_for_associative_memory} \cite{sparsely_encoded_associative_memory}
+\cite{ackley1985learning} \cite{capacity_of_hopfield} \cite{high-order_neural_networks} \cite{neural_network_models_for_associative_memory} \cite{sparsely_encoded_associative_memory}
 
 % Robin
 \cite{memsistor} \cite{principle_of_neural_associative_memory} \cite{parallel_models_of_associative_memory} \cite{associative_memory_using_small-world_architecture} \cite{associatron} \cite{associative_search_network} \cite{deep_machine_learning} \cite{on_associative_memory} \cite{from_cell_to_cortex}
