--- a/report/report.tex
+++ b/report/report.tex
@@ -27,9 +27,9 @@
 
 \subsection{Associative Memory}
 
-Defintion of associative memory.
+Definition of associative memory.
 
-Distinction between auto-associative and hetro-associative memory.
+Distinction between auto-associative and hetero-associative memory.
 
 % === [ Models of Associative Memory ] =========================================
 
