report: Add notes from Olle.

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,3 +1,5 @@
+% TODO: Pictures
+
 \documentclass[12pt, a4paper]{article}
 
 \usepackage{preamble}
@@ -35,6 +37,8 @@ Distinction between auto-associative and hetro-associative memory.
 
 \subsection{Hopfield Networks}
 
+Wenting.
+
 Mostly auto-associative. Also hetro-associative?
 
 \subsection{Bidirection Associative Memory}
@@ -43,17 +47,21 @@ Mostly hetro-associative. Also auto-associative.
 
 \subsection{Boltzman}
 
+Lucas.
+
 foo
 
 % TODO: Check wiki.
 
-\subsection{Hamming networks}
+%\subsection{Hamming networks}
 
-foo
+%foo
 
 % TODO: Decide whether to include Hamming networks or not.
 
 \subsection{Memory Resistor}
+
+Robin.
 
 foo
 
@@ -72,7 +80,11 @@ Definitions of capacity.
 
 \subsection{Hopfield Network}
 
+Wenting.
+
 1982, $0.15n$ (capacity of associative memory)
+
+% Above 0.15n releases the constraint on symmetries according to Olle.
 
 1985, proven $ \frac{n}{2\log{n}} $ (absolute capacity)
 
@@ -88,11 +100,15 @@ foo
 
 \subsection{Boltzman}
 
+Lucas.
+
 Pure Boltzman does not scale, thus impractical.
 
 Restricted Boltzman, basis for deep learning today, using multiple layers.
 
 \subsection{Memory Resistor}
+
+Robin.
 
 Proof of concept in 2010, using 3 neurons and 2 synapses to achieve 1 associative memory formation.
 
