report: Add AHaH reference to bibliography.

--- a/report/references.bib
+++ b/report/references.bib
@@ -210,3 +210,14 @@
 	year={2003},
 	note={[Online] Available: \url{https://www.ted.com/talks/jeff_hawkins_on_how_brain_science_will_change_computing}. [Accessed: 9 may, 2016]},
 }
+
+@article{ahah,
+  title={AHaH Computing--From Metastable Switches to Attractors to Machine Learning},
+  author={Nugent, Michael Alexander and Molter, Timothy Wesley},
+  journal={PloS one},
+  volume={9},
+  number={2},
+  pages={e85175},
+  year={2014},
+  publisher={Public Library of Science}
+}
