--- a/report/report.tex
+++ b/report/report.tex
@@ -65,9 +65,11 @@ The "Boltzmann Machine" is a form of "parallel constraint satisfaction network" 
 
 \subsection{Memory Resistor}
 
-Robin.
+%Robin.
 
 foo
+
+\cite{memsistor} \cite{ahah}
 
 % === [ Current Capabilities ] =================================================
 
@@ -84,7 +86,7 @@ Definitions of capacity.
 
 \subsection{Hopfield Network}
 
-Wenting.
+%Wenting.
 
 1982, $0.15n$ (capacity of associative memory)
 
@@ -104,7 +106,7 @@ foo
 
 \subsection{Boltzmann Machine}
 
-Lucas.
+%Lucas.
 
 Pure Boltzman does not scale, thus impractical.
 
@@ -112,7 +114,7 @@ Restricted Boltzman, basis for deep learning today, using multiple layers.
 
 \subsection{Memory Resistor}
 
-Robin.
+%Robin.
 
 Proof of concept in 2010, using 3 neurons and 2 synapses to achieve 1 associative memory formation.
 
@@ -151,7 +153,7 @@ Preliminary list of references, cited to force inclusion within the bibliography
 \cite{ackley1985learning} \cite{capacity_of_hopfield} \cite{high-order_neural_networks} \cite{neural_network_models_for_associative_memory} \cite{sparsely_encoded_associative_memory}
 
 % Robin
-\cite{memsistor} \cite{principle_of_neural_associative_memory} \cite{parallel_models_of_associative_memory} \cite{associative_memory_using_small-world_architecture} \cite{associatron} \cite{associative_search_network} \cite{deep_machine_learning} \cite{on_associative_memory} \cite{from_cell_to_cortex}
+\cite{memsistor} \cite{principle_of_neural_associative_memory} \cite{parallel_models_of_associative_memory} \cite{associative_memory_using_small-world_architecture} \cite{associatron} \cite{associative_search_network} \cite{deep_machine_learning} \cite{on_associative_memory} \cite{from_cell_to_cortex} \cite{ahah}
 
 \bibliography{references}
 
