--- a/report/report.tex
+++ b/report/report.tex
@@ -114,9 +114,8 @@ foo
 
 %Lucas.
 
-Pure Boltzman does not scale, thus impractical.
-
-Restricted Boltzman, basis for deep learning today, using multiple layers.
+%Pure Boltzman does not scale, thus impractical.
+%Restricted Boltzman, basis for deep learning today, using multiple layers.
 
 \subsection{Memory Resistor}
 
