readded named comment

--- a/report/report.tex
+++ b/report/report.tex
@@ -53,6 +53,8 @@ Mostly hetero-associative. Also auto-associative.
 
 \subsection{Boltzmann Machine}
 
+% Lucas
+
 %TODO The language in this section is horrible!!!
 
 The "Boltzmann Machine" (BM) is a form of "parallel constraint satisfaction network" \cite{ackley1985learning}. It is capable of learning the underlying constraints of a domain by only being shown examples of it. It is very similar to the Hopfield network as it also defines a global energy of the network. The equation that defines the global energy of the machine is identical to that of the Hopfield network.
