--- a/report/references.bib
+++ b/report/references.bib
@@ -44,6 +44,16 @@
 }
 
 % Lucas
+@article{metropolis1953equation,
+  title={Equation of state calculations by fast computing machines},
+  author={Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth, Marshall N and Teller, Augusta H and Teller, Edward},
+  journal={The journal of chemical physics},
+  volume={21},
+  number={6},
+  pages={1087--1092},
+  year={1953},
+  publisher={AIP Publishing}
+}
 @article{ackley1985learning,
   title={A learning algorithm for Boltzmann machines},
   author={Ackley, David H and Hinton, Geoffrey E and Sejnowski, Terrence J},
