report: Add initial introduction of memristors.

--- a/report/report.tex
+++ b/report/report.tex
@@ -84,7 +84,7 @@ Training is conducted in two phases, the first is called the "positive" phase we
 
 %Robin.
 
-foo
+Memory resistors, memsistors for short, are passive circuits which change their resistance as current flows through them, and maintain their resistance in between use. In other words, memsistors remember past flows of current (i.e. store state), and control resistance based on this knowledge (i.e. stored state). Several similarities have been identified bewteen the properties of memsistors and synapses, which make them interesting candidates for associative memory models.
 
 \cite{memsistor} \cite{ahah}
 
